--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-innovation-landing/03-templates-innovation-landing.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-innovation-landing/03-templates-innovation-landing.html
@@ -551,35 +551,6 @@
                 <div class="views-row">
                   <article class="card card--icons">
                     <div class="card__image">
-                      <a href="http://www.cheeseipsum.co.uk/"><img src="http://lorempixel.com/500/300/abstract/3/" alt="Card 5:3" height="300" width="500">
-</a>
-                    </div>
-                    <div class="card__content">
-                      <h3 class="card__title"><a href="http://www.cheeseipsum.co.uk/">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></h3>
-                      <div><p>Queso caerphilly cheesecake. Parmesan chalk and cheese port-salut port-salut babybel cottage cheese cheesy grin pepper jack. Croque monsieur paneer st. agur blue cheese emmental airedale monterey jack bavarian bergkase cheese triangles. Halloumi parmesan.</p></div>
-                      <div class="card__counts">
-                        <div class="view">
-                          <div class="has-icon--evidence" title="Evidence">67</div>
-                        </div>
-                        <div class="view">
-                          <div class="has-icon--comment" title="Comments">344</div>
-                        </div>
-                        <div class="view">
-                          <div class="has-icon--funding" title="Funding">246</div>
-                        </div>
-                        <div class="view">
-                          <div class="has-icon--favorite" title="Favorites">23</div>
-                        </div>
-                        <div class="view">
-                          <div class="has-icon--assistance" title="Assistance">300</div>
-                        </div>
-                      </div>
-                    </div>
-                  </article>
-                </div>
-                <div class="views-row">
-                  <article class="card card--icons">
-                    <div class="card__image">
                       <a href="http://cupcakeipsum.com/"><img src="http://lorempixel.com/500/300/nightlife/3/" alt="Card 5:3" height="300" width="500">
 </a>
                     </div>
@@ -609,35 +580,6 @@
                 <div class="views-row">
                   <article class="card card--icons">
                     <div class="card__image">
-                      <a href="http://hipsteripsum.me/"><img src="http://lorempixel.com/500/300/business/3/" alt="Card 5:3" height="300" width="500">
-</a>
-                    </div>
-                    <div class="card__content">
-                      <h3 class="card__title"><a href="http://hipsteripsum.me/">Whatever swag accusamus occupy, gentrify butcher tote bag</a></h3>
-                      <div><p>Fanny pack ullamco et veniam semiotics. Shoreditch PBR reprehenderit cliche, magna Tonx aesthetic. Narwhal photo booth DIY aute post-ironic anim. Vice cliche brunch est before they sold out fap, street art Odd Future fashion axe messenger bag nihil Tonx tattooed. Nihil hashtag incididunt, do eu art party Banksy jean shorts four loko typewriter.</p></div>
-                      <div class="card__counts">
-                        <div class="view">
-                          <div class="has-icon--evidence" title="Evidence">2</div>
-                        </div>
-                        <div class="view">
-                          <div class="has-icon--comment" title="Comments">5</div>
-                        </div>
-                        <div class="view">
-                          <div class="has-icon--funding" title="Funding">104</div>
-                        </div>
-                        <div class="view">
-                          <div class="has-icon--favorite" title="Favorites">3</div>
-                        </div>
-                        <div class="view">
-                          <div class="has-icon--assistance" title="Assistance">305</div>
-                        </div>
-                      </div>
-                    </div>
-                  </article>
-                </div>
-                <div class="views-row">
-                  <article class="card card--icons">
-                    <div class="card__image">
                       <a href="http://web20ipsum.com"><img src="http://lorempixel.com/500/300/technics/3/" alt="Card 5:3" height="300" width="500">
 </a>
                     </div>
@@ -656,6 +598,35 @@
                         </div>
                         <div class="view">
                           <div class="has-icon--favorite" title="Favorites">1</div>
+                        </div>
+                        <div class="view">
+                          <div class="has-icon--assistance" title="Assistance">4</div>
+                        </div>
+                      </div>
+                    </div>
+                  </article>
+                </div>
+                <div class="views-row">
+                  <article class="card card--icons">
+                    <div class="card__image">
+                      <a href="http://slipsum.com/lite/"><img src="http://lorempixel.com/500/300/people/3/" alt="Card 5:3" height="300" width="500">
+</a>
+                    </div>
+                    <div class="card__content">
+                      <h3 class="card__title"><a href="http://slipsum.com/lite/">Yeah, I like animals better than people sometimes</a></h3>
+                      <div><p>Especially dogs. Dogs are the best. Every time you come home, they act like they haven't seen you in a year. And the good thing about dogs... is they got different dogs for different people. Like pit bulls. The dog of dogs. Pit bull can be the right man's best friend... or the wrong man's worst enemy. You going to give me a dog for a pet, give me a pit bull.</p></div>
+                      <div class="card__counts">
+                        <div class="view">
+                          <div class="has-icon--evidence" title="Evidence">2</div>
+                        </div>
+                        <div class="view">
+                          <div class="has-icon--comment" title="Comments">2</div>
+                        </div>
+                        <div class="view">
+                          <div class="has-icon--funding" title="Funding">4</div>
+                        </div>
+                        <div class="view">
+                          <div class="has-icon--favorite" title="Favorites">7</div>
                         </div>
                         <div class="view">
                           <div class="has-icon--assistance" title="Assistance">4</div>
@@ -696,56 +667,27 @@
                 <div class="views-row">
                   <article class="card card--icons">
                     <div class="card__image">
-                      <a href="http://www.malevole.com/mv/misc/text/"><img src="http://lorempixel.com/500/300/sports/4/" alt="Card 5:3" height="300" width="500">
+                      <a href="http://www.niemanlab.org/journo-ipsum/"><img src="http://lorempixel.com/500/300/nature/3/" alt="Card 5:3" height="300" width="500">
 </a>
                     </div>
                     <div class="card__content">
-                      <h3 class="card__title"><a href="http://www.malevole.com/mv/misc/text/">Thunder, thunder, thundercats, Ho!</a></h3>
-                      <div><p>Beats all you've ever saw, been in trouble with the law since the day they was born. Straight'nin' the curve, flat'nin' the hills. Someday the mountain might get 'em, but the law never will. Makin' their way, the only way they know how, that's just a little bit more than the law will allow. Just good ol' boys, wouldn't change if they could, fightin' the system like a true modern day Robin Hood.</p></div>
+                      <h3 class="card__title"><a href="http://www.niemanlab.org/journo-ipsum/">Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM</a></h3>
+                      <div><p>Like button audience atomization overcome Colbert bump Free Darko inverted pyramid we will make them pay, digital circulation strategy Like button totally blowing up on Twitter church of the savvy. Pictures of Goats section open source discuss Frontline analog thinking filters paidContent.</p></div>
                       <div class="card__counts">
                         <div class="view">
-                          <div class="has-icon--evidence" title="Evidence">6</div>
+                          <div class="has-icon--evidence" title="Evidence">5</div>
                         </div>
                         <div class="view">
-                          <div class="has-icon--comment" title="Comments">55</div>
+                          <div class="has-icon--comment" title="Comments">23</div>
                         </div>
                         <div class="view">
-                          <div class="has-icon--funding" title="Funding">245</div>
+                          <div class="has-icon--funding" title="Funding">67</div>
                         </div>
                         <div class="view">
-                          <div class="has-icon--favorite" title="Favorites">3</div>
+                          <div class="has-icon--favorite" title="Favorites">100</div>
                         </div>
                         <div class="view">
-                          <div class="has-icon--assistance" title="Assistance">899</div>
-                        </div>
-                      </div>
-                    </div>
-                  </article>
-                </div>
-                <div class="views-row">
-                  <article class="card card--icons">
-                    <div class="card__image">
-                      <a href="http://chrisvalleskey.com/fillerama/"><img src="http://lorempixel.com/500/300/cats/3/" alt="Card 5:3" height="300" width="500">
-</a>
-                    </div>
-                    <div class="card__content">
-                      <h3 class="card__title"><a href="http://chrisvalleskey.com/fillerama/">Help, help, I'm being repressed!</a></h3>
-                      <div><p>The Knights Who Say Ni demand a sacrifice! …Are you suggesting that coconuts migrate? Knights of Ni, we are but simple travelers who seek the enchanter who lives beyond these woods. You don't frighten us, English pig-dogs! Go and boil your bottoms, sons of a silly person! I blow my nose at you, so-called Ah-thoor Keeng, you and all your silly English K-n-n-n-n-n-n-n-niggits!</p></div>
-                      <div class="card__counts">
-                        <div class="view">
-                          <div class="has-icon--evidence" title="Evidence">295</div>
-                        </div>
-                        <div class="view">
-                          <div class="has-icon--comment" title="Comments">1034</div>
-                        </div>
-                        <div class="view">
-                          <div class="has-icon--funding" title="Funding">450</div>
-                        </div>
-                        <div class="view">
-                          <div class="has-icon--favorite" title="Favorites">230</div>
-                        </div>
-                        <div class="view">
-                          <div class="has-icon--assistance" title="Assistance">487</div>
+                          <div class="has-icon--assistance" title="Assistance">65</div>
                         </div>
                       </div>
                     </div>
@@ -804,6 +746,64 @@
                         </div>
                         <div class="view">
                           <div class="has-icon--assistance" title="Assistance">1</div>
+                        </div>
+                      </div>
+                    </div>
+                  </article>
+                </div>
+                <div class="views-row">
+                  <article class="card card--icons">
+                    <div class="card__image">
+                      <a href="http://veggieipsum.com"><img src="http://lorempixel.com/500/300/food/3/" alt="Card 5:3" height="300" width="500">
+</a>
+                    </div>
+                    <div class="card__content">
+                      <h3 class="card__title"><a href="http://veggieipsum.com">Veggies sunt bona vobis, proinde vos postulo</a></h3>
+                      <div><p>Mung bean squash sorrel taro coriander collard greens gumbo bitterleaf tomato. Taro water chestnut celtuce turnip yarrow celery endive scallion black-eyed pea onion. Aubergine dulse turnip greens mustard salsify garlic soybean parsley bitterleaf desert raisin courgette.</p></div>
+                      <div class="card__counts">
+                        <div class="view">
+                          <div class="has-icon--evidence" title="Evidence">56</div>
+                        </div>
+                        <div class="view">
+                          <div class="has-icon--comment" title="Comments">245</div>
+                        </div>
+                        <div class="view">
+                          <div class="has-icon--funding" title="Funding">452</div>
+                        </div>
+                        <div class="view">
+                          <div class="has-icon--favorite" title="Favorites">1055</div>
+                        </div>
+                        <div class="view">
+                          <div class="has-icon--assistance" title="Assistance">45</div>
+                        </div>
+                      </div>
+                    </div>
+                  </article>
+                </div>
+                <div class="views-row">
+                  <article class="card card--icons">
+                    <div class="card__image">
+                      <a href="http://www.malevole.com/mv/misc/text/"><img src="http://lorempixel.com/500/300/sports/4/" alt="Card 5:3" height="300" width="500">
+</a>
+                    </div>
+                    <div class="card__content">
+                      <h3 class="card__title"><a href="http://www.malevole.com/mv/misc/text/">Thunder, thunder, thundercats, Ho!</a></h3>
+                      <div><p>Beats all you've ever saw, been in trouble with the law since the day they was born. Straight'nin' the curve, flat'nin' the hills. Someday the mountain might get 'em, but the law never will. Makin' their way, the only way they know how, that's just a little bit more than the law will allow. Just good ol' boys, wouldn't change if they could, fightin' the system like a true modern day Robin Hood.</p></div>
+                      <div class="card__counts">
+                        <div class="view">
+                          <div class="has-icon--evidence" title="Evidence">6</div>
+                        </div>
+                        <div class="view">
+                          <div class="has-icon--comment" title="Comments">55</div>
+                        </div>
+                        <div class="view">
+                          <div class="has-icon--funding" title="Funding">245</div>
+                        </div>
+                        <div class="view">
+                          <div class="has-icon--favorite" title="Favorites">3</div>
+                        </div>
+                        <div class="view">
+                          <div class="has-icon--assistance" title="Assistance">899</div>
                         </div>
                       </div>
                     </div>
