--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-wanteds-landing/03-templates-wanteds-landing.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-wanteds-landing/03-templates-wanteds-landing.html
@@ -500,8 +500,140 @@
         <div class="layout-constrain">
           
           <div class="l-main">
-            Content
-          </div>
+            <div class="pane pane--wanteds-views-action-card-panes">
+              <div class="pane__content">
+                <div class="view view--wanteds-cardflip">
+                  <div class="views-row">
+                    <div class="cardflip">
+                      <div class="cardflip__card">
+                        <div class="cardflip__1">
+                          <div class="cardflip__title">People</div>
+                          <div class="cardflip__image"><img src="../../images-patternlab/wanteds1.jpg"></div>
+                        </div>
+                        <div class="cardflip__2">
+                          <div class="cardflip__title">People</div>
+                          <div class="cardflip__description">Need people to further your innovation?</div>
+                          <div class="cardflip__link"><a href="#">Search Now</a></div>
+                          <div class="cardflip__image"><img src="../../images-patternlab/wanteds1.jpg"></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="views-row">
+                    <div class="cardflip">
+                      <div class="cardflip__card">
+                        <div class="cardflip__1">
+                          <div class="cardflip__title">Information & Research</div>
+                          <div class="cardflip__image"><img src="../../images-patternlab/wanteds2.jpg"></div>
+                        </div>
+                        <div class="cardflip__2">
+                          <div class="cardflip__title">Information & Research</div>
+                          <div class="cardflip__description">Need information to further your innovation?</div>
+                          <div class="cardflip__link"><a href="#">Search Now</a></div>
+                          <div class="cardflip__image"><img src="../../images-patternlab/wanteds2.jpg"></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="views-row">
+                    <div class="cardflip">
+                      <div class="cardflip__card">
+                        <div class="cardflip__1">
+                          <div class="cardflip__title">Materials & Supplies</div>
+                          <div class="cardflip__image"><img src="../../images-patternlab/wanteds3.jpg"></div>
+                        </div>
+                        <div class="cardflip__2">
+                          <div class="cardflip__title">Materials & Supplies</div>
+                          <div class="cardflip__description">Need schnauzers to further your innovation?</div>
+                          <div class="cardflip__link"><a href="#">Search Now</a></div>
+                          <div class="cardflip__image"><img src="../../images-patternlab/wanteds3.jpg"></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="views-row">
+                    <div class="cardflip">
+                      <div class="cardflip__card">
+                        <div class="cardflip__1">
+                          <div class="cardflip__title">Ideas & Solutions</div>
+                          <div class="cardflip__image"><img src="../../images-patternlab/wanteds4.jpg"></div>
+                        </div>
+                        <div class="cardflip__2">
+                          <div class="cardflip__title">Ideas & Solutions</div>
+                          <div class="cardflip__description">Need ideas to further your innovation?</div>
+                          <div class="cardflip__link"><a href="#">Search Now</a></div>
+                          <div class="cardflip__image"><img src="../../images-patternlab/wanteds4.jpg"></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="views-row">
+                    <div class="cardflip">
+                      <div class="cardflip__card">
+                        <div class="cardflip__1">
+                          <div class="cardflip__title">Calls To Action</div>
+                          <div class="cardflip__image"><img src="../../images-patternlab/wanteds5.jpg"></div>
+                        </div>
+                        <div class="cardflip__2">
+                          <div class="cardflip__title">Calls To Action</div>
+                          <div class="cardflip__description">Need calls to action to further your innovation?</div>
+                          <div class="cardflip__link"><a href="#">Search Now</a></div>
+                          <div class="cardflip__image"><img src="../../images-patternlab/wanteds6.jpg"></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="views-row">
+                    <div class="cardflip">
+                      <div class="cardflip__card">
+                        <div class="cardflip__1">
+                          <div class="cardflip__title">Services & Support</div>
+                          <div class="cardflip__image"><img src="../../images-patternlab/wanteds6.jpg"></div>
+                        </div>
+                        <div class="cardflip__2">
+                          <div class="cardflip__title">Services & Support</div>
+                          <div class="cardflip__description">Need services & support to further your innovation?</div>
+                          <div class="cardflip__link"><a href="#">Search Now</a></div>
+                          <div class="cardflip__image"><img src="../../images-patternlab/wanteds6.jpg"></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="views-row">
+                    <div class="cardflip">
+                      <div class="cardflip__card">
+                        <div class="cardflip__1">
+                          <div class="cardflip__title">Free</div>
+                          <div class="cardflip__image"><img src="../../images-patternlab/wanteds7.jpg"></div>
+                        </div>
+                        <div class="cardflip__2">
+                          <div class="cardflip__title">Free</div>
+                          <div class="cardflip__description">Need free to further your innovation?</div>
+                          <div class="cardflip__link"><a href="#">Search Now</a></div>
+                          <div class="cardflip__image"><img src="../../images-patternlab/wanteds7.jpg"></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="views-row">
+                    <div class="cardflip">
+                      <div class="cardflip__card">
+                        <div class="cardflip__1">
+                          <div class="cardflip__title">Other</div>
+                          <div class="cardflip__image"><img src="../../images-patternlab/wanteds8.jpg"></div>
+                        </div>
+                        <div class="cardflip__2">
+                          <div class="cardflip__title">Other</div>
+                          <div class="cardflip__description">Need other to further your innovation?</div>
+                          <div class="cardflip__link"><a href="#">Search Now</a></div>
+                          <div class="cardflip__image"><img src="../../images-patternlab/wanteds8.jpg"></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>          </div>
 
         </div>
       </div>
@@ -578,7 +710,7 @@
 	<script>
 		// handle injection of items from PHP
 		var patternPartial = "templates-wanteds-landing";
-		var lineage        = [{"lineagePattern":"organisms-header","lineagePath":"..\/..\/patterns\/02-organisms-00-regions-01-header\/02-organisms-00-regions-01-header.html","lineageState":"inprogress"},{"lineagePattern":"organisms-navigation","lineagePath":"..\/..\/patterns\/02-organisms-00-regions-02-navigation\/02-organisms-00-regions-02-navigation.html","lineageState":"inprogress"},{"lineagePattern":"atoms-landing-page-intro-wanteds","lineagePath":"..\/..\/patterns\/00-atoms-10-page-elements-_landing-page-intro-wanteds\/00-atoms-10-page-elements-_landing-page-intro-wanteds.html","lineageState":"inprogress"},{"lineagePattern":"organisms-postscript","lineagePath":"..\/..\/patterns\/02-organisms-00-regions-_postscript\/02-organisms-00-regions-_postscript.html","lineageState":"inprogress"},{"lineagePattern":"organisms-footer","lineagePath":"..\/..\/patterns\/02-organisms-00-regions-03-footer\/02-organisms-00-regions-03-footer.html","lineageState":"inprogress"}];
+		var lineage        = [{"lineagePattern":"organisms-header","lineagePath":"..\/..\/patterns\/02-organisms-00-regions-01-header\/02-organisms-00-regions-01-header.html","lineageState":"inprogress"},{"lineagePattern":"organisms-navigation","lineagePath":"..\/..\/patterns\/02-organisms-00-regions-02-navigation\/02-organisms-00-regions-02-navigation.html","lineageState":"inprogress"},{"lineagePattern":"atoms-landing-page-intro-wanteds","lineagePath":"..\/..\/patterns\/00-atoms-10-page-elements-_landing-page-intro-wanteds\/00-atoms-10-page-elements-_landing-page-intro-wanteds.html","lineageState":"inprogress"},{"lineagePattern":"molecules-wanteds-action-card-panes","lineagePath":"..\/..\/patterns\/01-molecules-04-panes-_wanteds-action-card-panes\/01-molecules-04-panes-_wanteds-action-card-panes.html","lineageState":"inprogress"},{"lineagePattern":"organisms-postscript","lineagePath":"..\/..\/patterns\/02-organisms-00-regions-_postscript\/02-organisms-00-regions-_postscript.html","lineageState":"inprogress"},{"lineagePattern":"organisms-footer","lineagePath":"..\/..\/patterns\/02-organisms-00-regions-03-footer\/02-organisms-00-regions-03-footer.html","lineageState":"inprogress"}];
 		var lineageR       = [{"lineagePattern":"pages-wanteds-landing","lineagePath":"..\/..\/patterns\/04-pages-wanteds-landing\/04-pages-wanteds-landing.html","lineageState":"inprogress"}];
 		var patternState   = "inprogress";
 		var cssEnabled     = false;
