added test of hidden about text to Pattern Lab

--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-wanteds-landing/03-templates-wanteds-landing.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-wanteds-landing/03-templates-wanteds-landing.escaped.html
@@ -435,7 +435,10 @@
                 &lt;h1&gt;Page Title&lt;/h1&gt;
               &lt;/div&gt;
               &lt;div class=&quot;pane--landing-intro__right&quot;&gt;
-                &lt;p&gt;&lt;a href=&quot;#&quot; class=&quot;button button--add&quot;&gt;Post a Wanted Ad&lt;/a&gt;&lt;a href=&quot;#&quot; class=&quot;button button--orange button--add&quot;&gt;About Wanteds&lt;/a&gt;&lt;/p&gt;
+                &lt;p&gt;&lt;a href=&quot;#&quot; class=&quot;button button--add&quot;&gt;Post a Wanted Ad&lt;/a&gt;&lt;a href=&quot;#&quot; class=&quot;button button--orange button--add toggle-button&quot;&gt;About Wanteds&lt;/a&gt;&lt;/p&gt;
+                &lt;p class=&quot;toggle-text&quot;&gt;Look at what's happened to me, I can't believe it myself.
+                  Suddenly I'm up on top of the world, it should've been somebody else.
+                  Believe it or not, I'm walking on air. I never thought I could feel so free - flying away on a wing and a prayer. Who could it be? Believe it or not it's just me.&lt;/p&gt;
               &lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;        &lt;/div&gt;
