--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-wanteds-landing/03-templates-wanteds-landing.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-wanteds-landing/03-templates-wanteds-landing.html
@@ -491,7 +491,10 @@
                 <h1>Page Title</h1>
               </div>
               <div class="pane--landing-intro__right">
-                <p><a href="#" class="button button--add">Post a Wanted Ad</a><a href="#" class="button button--orange button--add">About Wanteds</a></p>
+                <p><a href="#" class="button button--add">Post a Wanted Ad</a><a href="#" class="button button--orange button--add toggle-button">About Wanteds</a></p>
+                <p class="toggle-text">Look at what's happened to me, I can't believe it myself.
+                  Suddenly I'm up on top of the world, it should've been somebody else.
+                  Believe it or not, I'm walking on air. I never thought I could feel so free - flying away on a wing and a prayer. Who could it be? Believe it or not it's just me.</p>
               </div>
             </div>
           </div>        </div>
