--- a/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-04-panes-point-of-contact/01-molecules-04-panes-point-of-contact.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-04-panes-point-of-contact/01-molecules-04-panes-point-of-contact.html
@@ -60,15 +60,15 @@
     <article role="article" class="layout-slat profile-thumb">
         <div class="layout-slat__media"> 
           <div class="profile-thumb__image--rounded">
-            <a href="#"><img alt="" src="../../images-patternlab/sherlock-78-78.jpg"></a>
+            <a href="#"><img alt="" src="../../images-patternlab/cameron-78-78.jpg"></a>
           </div>
           <div class="profile-thumb__name">
-            <a href="#">Sherlock Holmes</a>  
+            <a href="#">Cameron Howe</a>  
           </div>
         </div>
         <div class="layout-slat__content">
           <div class="profile-thumb__summary">
-            How often have I said to you that when you have eliminated the impossible, whatever remains, however improbable, must be the truth?
+            Computers could be more. They should be.
           </div>
         </div>
     </article>
