--- a/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-04-panes/index.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-04-panes/index.html
@@ -809,15 +809,15 @@
     <article role="article" class="layout-slat profile-thumb">
         <div class="layout-slat__media"> 
           <div class="profile-thumb__image--rounded">
-            <a href="#"><img alt="" src="../../images-patternlab/sherlock-78-78.jpg"></a>
+            <a href="#"><img alt="" src="../../images-patternlab/cameron-78-78.jpg"></a>
           </div>
           <div class="profile-thumb__name">
-            <a href="#">Sherlock Holmes</a>  
+            <a href="#">Cameron Howe</a>  
           </div>
         </div>
         <div class="layout-slat__content">
           <div class="profile-thumb__summary">
-            How often have I said to you that when you have eliminated the impossible, whatever remains, however improbable, must be the truth?
+            Computers could be more. They should be.
           </div>
         </div>
     </article>
@@ -834,15 +834,15 @@
     &lt;article role=&quot;article&quot; class=&quot;layout-slat profile-thumb&quot;&gt;
         &lt;div class=&quot;layout-slat__media&quot;&gt; 
           &lt;div class=&quot;profile-thumb__image--rounded&quot;&gt;
-            &lt;a href=&quot;#&quot;&gt;&lt;img alt=&quot;&quot; src=&quot;../../images-patternlab/sherlock-78-78.jpg&quot;&gt;&lt;/a&gt;
+            &lt;a href=&quot;#&quot;&gt;&lt;img alt=&quot;&quot; src=&quot;../../images-patternlab/cameron-78-78.jpg&quot;&gt;&lt;/a&gt;
           &lt;/div&gt;
           &lt;div class=&quot;profile-thumb__name&quot;&gt;
-            &lt;a href=&quot;#&quot;&gt;Sherlock Holmes&lt;/a&gt;  
+            &lt;a href=&quot;#&quot;&gt;Cameron Howe&lt;/a&gt;  
           &lt;/div&gt;
         &lt;/div&gt;
         &lt;div class=&quot;layout-slat__content&quot;&gt;
           &lt;div class=&quot;profile-thumb__summary&quot;&gt;
-            How often have I said to you that when you have eliminated the impossible, whatever remains, however improbable, must be the truth?
+            Computers could be more. They should be.
           &lt;/div&gt;
         &lt;/div&gt;
     &lt;/article&gt;
@@ -865,13 +865,28 @@
           <div class="layout-slat layout-slat--small">
             <div class="layout-slat__media">      
               <div class="view__author-image">
-                <img src="../../images-patternlab/tyrion-35-35.jpg">
+                <img src="../../images-patternlab/mulder-35-35.jpg">
               </div>
             </div>
             <div class="layout-slat__content">
-              <div class="view__title"><a href="#">Thunder, thunder, thundercats, Ho!</a></div>
+              <div class="view__title"><a href="#">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a></div>
               <div class="view__meta">
-                Posted by <strong>Tyrion Lannister</strong> | June 8 at 11:37pm
+                Posted by <strong>Fox Mulder</strong> | March 22 at 4:45pm
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="views-row">
+          <div class="layout-slat layout-slat--small">
+            <div class="layout-slat__media">      
+              <div class="view__author-image">
+                <img src="../../images-patternlab/sherlock-35-35.jpg">
+              </div>
+            </div>
+            <div class="layout-slat__content">
+              <div class="view__title"><a href="#">You Can't Take The Sky From Me</a></div>
+              <div class="view__meta">
+                Posted by <strong>Sherlock Holmes</strong> | January 1 at 6:20am
               </div>
             </div>
           </div>
@@ -887,21 +902,6 @@
               <div class="view__title"><a href="#">Danish danish candy canes bonbon cheesecake danish marzipan</a></div>
               <div class="view__meta">
                 Posted by <strong>Inigo Montoya</strong> | November 19 at 11:55pm
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="views-row">
-          <div class="layout-slat layout-slat--small">
-            <div class="layout-slat__media">      
-              <div class="view__author-image">
-                <img src="../../images-patternlab/josh-35-35.jpg">
-              </div>
-            </div>
-            <div class="layout-slat__content">
-              <div class="view__title"><a href="#">Yeah, I like animals better than people sometimes</a></div>
-              <div class="view__meta">
-                Posted by <strong>Joshua Lyman</strong> | July 22 at 11:12am
               </div>
             </div>
           </div>
@@ -924,13 +924,28 @@
           &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
             &lt;div class=&quot;layout-slat__media&quot;&gt;      
               &lt;div class=&quot;view__author-image&quot;&gt;
-                &lt;img src=&quot;../../images-patternlab/tyrion-35-35.jpg&quot;&gt;
+                &lt;img src=&quot;../../images-patternlab/mulder-35-35.jpg&quot;&gt;
               &lt;/div&gt;
             &lt;/div&gt;
             &lt;div class=&quot;layout-slat__content&quot;&gt;
-              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Thunder, thunder, thundercats, Ho!&lt;/a&gt;&lt;/div&gt;
+              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Bacon ipsum dolor sit amet turducken strip steak beef ribs shank&lt;/a&gt;&lt;/div&gt;
               &lt;div class=&quot;view__meta&quot;&gt;
-                Posted by &lt;strong&gt;Tyrion Lannister&lt;/strong&gt; | June 8 at 11:37pm
+                Posted by &lt;strong&gt;Fox Mulder&lt;/strong&gt; | March 22 at 4:45pm
+              &lt;/div&gt;
+            &lt;/div&gt;
+          &lt;/div&gt;
+        &lt;/div&gt;
+        &lt;div class=&quot;views-row&quot;&gt;
+          &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
+            &lt;div class=&quot;layout-slat__media&quot;&gt;      
+              &lt;div class=&quot;view__author-image&quot;&gt;
+                &lt;img src=&quot;../../images-patternlab/sherlock-35-35.jpg&quot;&gt;
+              &lt;/div&gt;
+            &lt;/div&gt;
+            &lt;div class=&quot;layout-slat__content&quot;&gt;
+              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;You Can't Take The Sky From Me&lt;/a&gt;&lt;/div&gt;
+              &lt;div class=&quot;view__meta&quot;&gt;
+                Posted by &lt;strong&gt;Sherlock Holmes&lt;/strong&gt; | January 1 at 6:20am
               &lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
@@ -946,21 +961,6 @@
               &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Danish danish candy canes bonbon cheesecake danish marzipan&lt;/a&gt;&lt;/div&gt;
               &lt;div class=&quot;view__meta&quot;&gt;
                 Posted by &lt;strong&gt;Inigo Montoya&lt;/strong&gt; | November 19 at 11:55pm
-              &lt;/div&gt;
-            &lt;/div&gt;
-          &lt;/div&gt;
-        &lt;/div&gt;
-        &lt;div class=&quot;views-row&quot;&gt;
-          &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
-            &lt;div class=&quot;layout-slat__media&quot;&gt;      
-              &lt;div class=&quot;view__author-image&quot;&gt;
-                &lt;img src=&quot;../../images-patternlab/josh-35-35.jpg&quot;&gt;
-              &lt;/div&gt;
-            &lt;/div&gt;
-            &lt;div class=&quot;layout-slat__content&quot;&gt;
-              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Yeah, I like animals better than people sometimes&lt;/a&gt;&lt;/div&gt;
-              &lt;div class=&quot;view__meta&quot;&gt;
-                Posted by &lt;strong&gt;Joshua Lyman&lt;/strong&gt; | July 22 at 11:12am
               &lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
