--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-wanteds-category/03-templates-wanteds-category.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-wanteds-category/03-templates-wanteds-category.html
@@ -491,7 +491,10 @@
                 <h1>Page Title</h1>
               </div>
               <div class="pane--landing-intro__right">
-                <p><a href="#" class="button button--add">Post a Wanted Ad</a><a href="#" class="button button--orange button--add">About Wanteds</a></p>
+                <p><a href="#" class="button button--add">Post a Wanted Ad</a><a href="#" class="button button--orange button--add toggle-button">About Wanteds</a></p>
+                <p class="toggle-text">Look at what's happened to me, I can't believe it myself.
+                  Suddenly I'm up on top of the world, it should've been somebody else.
+                  Believe it or not, I'm walking on air. I never thought I could feel so free - flying away on a wing and a prayer. Who could it be? Believe it or not it's just me.</p>
               </div>
             </div>
           </div>        </div>
@@ -507,7 +510,7 @@
                       <div class="views-row">
                         <div class="layout-slat card card--listing">
                           <div class="layout-slat__media">
-                            <a href="#"><img src="http://lorempixel.com/500/300/city/3/" alt="Card 5:3" height="300" width="500">
+                            <a href="#"><img src="http://lorempixel.com/500/300/cats/3/" alt="Card 5:3" height="300" width="500">
 </a>
                           </div>  
                           <div class="layout-slat__content">
@@ -515,53 +518,22 @@
                               <div class="card__type">People</div>
                               <div class="card__location">Albania</div>
                             </div>
-                            <h3 class="card__title"><a href="#">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a></h3>
+                            <h3 class="card__title"><a href="#">Help, help, I'm being repressed!</a></h3>
                             <div class="card__summary">
-                              <p>Boudin sausage jerky pastrami ground round salami biltong. Sausage fatback strip steak doner pork loin, pork belly drumstick ham short loin hamburger shankle. Short ribs sirloin rump tri-tip beef biltong. Meatball pig salami, jowl pork loin fatback short loin drumstick andouille.</p>
+                              <p>The Knights Who Say Ni demand a sacrifice! …Are you suggesting that coconuts migrate? Knights of Ni, we are but simple travelers who seek the enchanter who lives beyond these woods. You don't frighten us, English pig-dogs! Go and boil your bottoms, sons of a silly person! I blow my nose at you, so-called Ah-thoor Keeng, you and all your silly English K-n-n-n-n-n-n-n-niggits!</p>
                             </div>
                             <div class="card__counts">
                               <div class="view">
-                                <div title="Comments" class="has-icon--comment">0</div>
+                                <div title="Comments" class="has-icon--comment">1034</div>
                               </div>
                               <div class="view">
-                                <div title="Favorites" class="has-icon--favorite">0</div>
+                                <div title="Favorites" class="has-icon--favorite">230</div>
                               </div>
                               <div class="view">
-                                <div title="Funding Available" class="has-icon--funding">2</div>
+                                <div title="Funding Available" class="has-icon--funding">450</div>
                               </div>
                               <div class="view">
-                                <div title="Number of People Needed" class="has-icon--member">1</div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>                      </div>
-                      <div class="views-row">
-                        <div class="layout-slat card card--listing">
-                          <div class="layout-slat__media">
-                            <a href="#"><img src="http://lorempixel.com/500/300/abstract/3/" alt="Card 5:3" height="300" width="500">
-</a>
-                          </div>  
-                          <div class="layout-slat__content">
-                            <div class="card__meta">
-                              <div class="card__type">People</div>
-                              <div class="card__location">Albania</div>
-                            </div>
-                            <h3 class="card__title"><a href="#">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></h3>
-                            <div class="card__summary">
-                              <p>Queso caerphilly cheesecake. Parmesan chalk and cheese port-salut port-salut babybel cottage cheese cheesy grin pepper jack. Croque monsieur paneer st. agur blue cheese emmental airedale monterey jack bavarian bergkase cheese triangles. Halloumi parmesan.</p>
-                            </div>
-                            <div class="card__counts">
-                              <div class="view">
-                                <div title="Comments" class="has-icon--comment">344</div>
-                              </div>
-                              <div class="view">
-                                <div title="Favorites" class="has-icon--favorite">23</div>
-                              </div>
-                              <div class="view">
-                                <div title="Funding Available" class="has-icon--funding">246</div>
-                              </div>
-                              <div class="view">
-                                <div title="Number of People Needed" class="has-icon--member">899</div>
+                                <div title="Number of People Needed" class="has-icon--member">4578</div>
                               </div>
                             </div>
                           </div>
@@ -631,6 +603,68 @@
                       <div class="views-row">
                         <div class="layout-slat card card--listing">
                           <div class="layout-slat__media">
+                            <a href="#"><img src="http://lorempixel.com/500/300/transport/3/" alt="Card 5:3" height="300" width="500">
+</a>
+                          </div>  
+                          <div class="layout-slat__content">
+                            <div class="card__meta">
+                              <div class="card__type">People</div>
+                              <div class="card__location">Albania</div>
+                            </div>
+                            <h3 class="card__title"><a href="#">Rebel Mission to Ord Mantell</a></h3>
+                            <div class="card__summary">
+                              <p>I find your lack of faith disturbing. A tremor in the Force. The last time I felt it was in the presence of my old master. Don't act so surprised, Your Highness. You weren't on any mercy mission this time. Several transmissions were beamed to this ship by Rebel spies. I want to know what happened to the plans they sent you. The plans you refer to will soon be back in our hands.</p>
+                            </div>
+                            <div class="card__counts">
+                              <div class="view">
+                                <div title="Comments" class="has-icon--comment">36</div>
+                              </div>
+                              <div class="view">
+                                <div title="Favorites" class="has-icon--favorite">20</div>
+                              </div>
+                              <div class="view">
+                                <div title="Funding Available" class="has-icon--funding">225</div>
+                              </div>
+                              <div class="view">
+                                <div title="Number of People Needed" class="has-icon--member">145</div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>                      </div>
+                      <div class="views-row">
+                        <div class="layout-slat card card--listing">
+                          <div class="layout-slat__media">
+                            <a href="#"><img src="http://lorempixel.com/500/300/sports/4/" alt="Card 5:3" height="300" width="500">
+</a>
+                          </div>  
+                          <div class="layout-slat__content">
+                            <div class="card__meta">
+                              <div class="card__type">People</div>
+                              <div class="card__location">Albania</div>
+                            </div>
+                            <h3 class="card__title"><a href="#">Thunder, thunder, thundercats, Ho!</a></h3>
+                            <div class="card__summary">
+                              <p>Beats all you've ever saw, been in trouble with the law since the day they was born. Straight'nin' the curve, flat'nin' the hills. Someday the mountain might get 'em, but the law never will. Makin' their way, the only way they know how, that's just a little bit more than the law will allow. Just good ol' boys, wouldn't change if they could, fightin' the system like a true modern day Robin Hood.</p>
+                            </div>
+                            <div class="card__counts">
+                              <div class="view">
+                                <div title="Comments" class="has-icon--comment">55</div>
+                              </div>
+                              <div class="view">
+                                <div title="Favorites" class="has-icon--favorite">3</div>
+                              </div>
+                              <div class="view">
+                                <div title="Funding Available" class="has-icon--funding">245</div>
+                              </div>
+                              <div class="view">
+                                <div title="Number of People Needed" class="has-icon--member">35</div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>                      </div>
+                      <div class="views-row">
+                        <div class="layout-slat card card--listing">
+                          <div class="layout-slat__media">
                             <a href="#"><img src="http://lorempixel.com/500/300/business/3/" alt="Card 5:3" height="300" width="500">
 </a>
                           </div>  
@@ -655,37 +689,6 @@
                               </div>
                               <div class="view">
                                 <div title="Number of People Needed" class="has-icon--member">55</div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>                      </div>
-                      <div class="views-row">
-                        <div class="layout-slat card card--listing">
-                          <div class="layout-slat__media">
-                            <a href="#"><img src="http://lorempixel.com/500/300/animals/3/" alt="Card 5:3" height="300" width="500">
-</a>
-                          </div>  
-                          <div class="layout-slat__content">
-                            <div class="card__meta">
-                              <div class="card__type">People</div>
-                              <div class="card__location">Albania</div>
-                            </div>
-                            <h3 class="card__title"><a href="#">You Can't Take The Sky From Me</a></h3>
-                            <div class="card__summary">
-                              <p> We're gonna explode? I don't wanna explode. Boy, when they were handing out school spirit, you didn't even stand in line, did you? We will rule over all this land, and we will call it...This Land. It's about power and it's about women and you just hate those two words in the same sentence, don't you? Just once I would like to run into a cult of bunny worshippers. Put your words in word places please. </p>
-                            </div>
-                            <div class="card__counts">
-                              <div class="view">
-                                <div title="Comments" class="has-icon--comment">1</div>
-                              </div>
-                              <div class="view">
-                                <div title="Favorites" class="has-icon--favorite">10</div>
-                              </div>
-                              <div class="view">
-                                <div title="Funding Available" class="has-icon--funding">4500</div>
-                              </div>
-                              <div class="view">
-                                <div title="Number of People Needed" class="has-icon--member">10</div>
                               </div>
                             </div>
                           </div>
@@ -724,6 +727,37 @@
                       <div class="views-row">
                         <div class="layout-slat card card--listing">
                           <div class="layout-slat__media">
+                            <a href="#"><img src="http://lorempixel.com/500/300/people/3/" alt="Card 5:3" height="300" width="500">
+</a>
+                          </div>  
+                          <div class="layout-slat__content">
+                            <div class="card__meta">
+                              <div class="card__type">People</div>
+                              <div class="card__location">Albania</div>
+                            </div>
+                            <h3 class="card__title"><a href="#">Yeah, I like animals better than people sometimes</a></h3>
+                            <div class="card__summary">
+                              <p>Especially dogs. Dogs are the best. Every time you come home, they act like they haven't seen you in a year. And the good thing about dogs... is they got different dogs for different people. Like pit bulls. The dog of dogs. Pit bull can be the right man's best friend... or the wrong man's worst enemy. You going to give me a dog for a pet, give me a pit bull.</p>
+                            </div>
+                            <div class="card__counts">
+                              <div class="view">
+                                <div title="Comments" class="has-icon--comment">2</div>
+                              </div>
+                              <div class="view">
+                                <div title="Favorites" class="has-icon--favorite">7</div>
+                              </div>
+                              <div class="view">
+                                <div title="Funding Available" class="has-icon--funding">4</div>
+                              </div>
+                              <div class="view">
+                                <div title="Number of People Needed" class="has-icon--member">167</div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>                      </div>
+                      <div class="views-row">
+                        <div class="layout-slat card card--listing">
+                          <div class="layout-slat__media">
                             <a href="#"><img src="http://lorempixel.com/500/300/nature/3/" alt="Card 5:3" height="300" width="500">
 </a>
                           </div>  
@@ -748,37 +782,6 @@
                               </div>
                               <div class="view">
                                 <div title="Number of People Needed" class="has-icon--member">10</div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>                      </div>
-                      <div class="views-row">
-                        <div class="layout-slat card card--listing">
-                          <div class="layout-slat__media">
-                            <a href="#"><img src="http://lorempixel.com/500/300/cats/3/" alt="Card 5:3" height="300" width="500">
-</a>
-                          </div>  
-                          <div class="layout-slat__content">
-                            <div class="card__meta">
-                              <div class="card__type">People</div>
-                              <div class="card__location">Albania</div>
-                            </div>
-                            <h3 class="card__title"><a href="#">Help, help, I'm being repressed!</a></h3>
-                            <div class="card__summary">
-                              <p>The Knights Who Say Ni demand a sacrifice! …Are you suggesting that coconuts migrate? Knights of Ni, we are but simple travelers who seek the enchanter who lives beyond these woods. You don't frighten us, English pig-dogs! Go and boil your bottoms, sons of a silly person! I blow my nose at you, so-called Ah-thoor Keeng, you and all your silly English K-n-n-n-n-n-n-n-niggits!</p>
-                            </div>
-                            <div class="card__counts">
-                              <div class="view">
-                                <div title="Comments" class="has-icon--comment">1034</div>
-                              </div>
-                              <div class="view">
-                                <div title="Favorites" class="has-icon--favorite">230</div>
-                              </div>
-                              <div class="view">
-                                <div title="Funding Available" class="has-icon--funding">450</div>
-                              </div>
-                              <div class="view">
-                                <div title="Number of People Needed" class="has-icon--member">4578</div>
                               </div>
                             </div>
                           </div>
