--- a/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-innovation-detail/04-pages-innovation-detail.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-innovation-detail/04-pages-innovation-detail.html
@@ -603,15 +603,15 @@
             <article role="article" class="layout-slat profile-thumb">
                 <div class="layout-slat__media"> 
                   <div class="profile-thumb__image--rounded">
-                    <a href="#"><img alt="" src="../../images-patternlab/josh-78-78.jpg"></a>
+                    <a href="#"><img alt="" src="../../images-patternlab/tyrion-78-78.jpg"></a>
                   </div>
                   <div class="profile-thumb__name">
-                    <a href="#">Joshua Lyman</a>  
+                    <a href="#">Tyrion Lannister</a>  
                   </div>
                 </div>
                 <div class="layout-slat__content">
                   <div class="profile-thumb__summary">
-                     I drink from the keg of glory, Donna. Bring me the finest muffins and bagels in all the land.
+                    Never forget what you are.  The rest of the world will not.  Wear it like armor, and it can never be used to hurt you.
                   </div>
                 </div>
             </article>
