--- a/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-user/04-pages-user.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-user/04-pages-user.html
@@ -698,36 +698,6 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
-                      <img src="../../images-patternlab/inigo-35-35.jpg">
-                    </div>
-                  </div>
-                  <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Danish danish candy canes bonbon cheesecake danish marzipan</a></div>
-                    <div class="view__meta">
-                      Posted by <strong>Inigo Montoya</strong> | November 19 at 11:55pm
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="views-row">
-                <div class="layout-slat layout-slat--small">
-                  <div class="layout-slat__media">      
-                    <div class="view__author-image">
-                      <img src="../../images-patternlab/buttercup-35-35.jpg">
-                    </div>
-                  </div>
-                  <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></div>
-                    <div class="view__meta">
-                      Posted by <strong>Princess Buttercup</strong> | December 28 at 8:34am
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="views-row">
-                <div class="layout-slat layout-slat--small">
-                  <div class="layout-slat__media">      
-                    <div class="view__author-image">
                       <img src="../../images-patternlab/scully-35-35.jpg">
                     </div>
                   </div>
@@ -735,6 +705,36 @@
                     <div class="view__title"><a href="#">Whatever swag accusamus occupy, gentrify butcher tote bag</a></div>
                     <div class="view__meta">
                       Posted by <strong>Dana Scully</strong> | April 13 at 10:14am
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="views-row">
+                <div class="layout-slat layout-slat--small">
+                  <div class="layout-slat__media">      
+                    <div class="view__author-image">
+                      <img src="../../images-patternlab/mulder-35-35.jpg">
+                    </div>
+                  </div>
+                  <div class="layout-slat__content">
+                    <div class="view__title"><a href="#">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a></div>
+                    <div class="view__meta">
+                      Posted by <strong>Fox Mulder</strong> | March 22 at 4:45pm
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="views-row">
+                <div class="layout-slat layout-slat--small">
+                  <div class="layout-slat__media">      
+                    <div class="view__author-image">
+                      <img src="../../images-patternlab/tyrion-35-35.jpg">
+                    </div>
+                  </div>
+                  <div class="layout-slat__content">
+                    <div class="view__title"><a href="#">Thunder, thunder, thundercats, Ho!</a></div>
+                    <div class="view__meta">
+                      Posted by <strong>Tyrion Lannister</strong> | June 8 at 11:37pm
                     </div>
                   </div>
                 </div>
