--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-user/03-templates-user.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-user/03-templates-user.html
@@ -687,13 +687,13 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
-                      <img src="../../images-patternlab/gordon-35-35.jpg">
+                      <img src="../../images-patternlab/tyrion-35-35.jpg">
                     </div>
                   </div>
                   <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Help, help, I'm being repressed!</a></div>
+                    <div class="view__title"><a href="#">Thunder, thunder, thundercats, Ho!</a></div>
                     <div class="view__meta">
-                      Posted by <strong>Gordon Clark</strong> | October 25 at 3:51am
+                      Posted by <strong>Tyrion Lannister</strong> | June 8 at 11:37pm
                     </div>
                   </div>
                 </div>
@@ -702,13 +702,13 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
-                      <img src="../../images-patternlab/sherlock-35-35.jpg">
+                      <img src="../../images-patternlab/watson-35-35.jpg">
                     </div>
                   </div>
                   <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">You Can't Take The Sky From Me</a></div>
+                    <div class="view__title"><a href="#">Veggies sunt bona vobis, proinde vos postulo</a></div>
                     <div class="view__meta">
-                      Posted by <strong>Sherlock Holmes</strong> | January 1 at 6:20am
+                      Posted by <strong>Dr. John Watson, M.D.</strong> | February 10 at 1:20pm
                     </div>
                   </div>
                 </div>
@@ -717,13 +717,13 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
-                      <img src="../../images-patternlab/inigo-35-35.jpg">
+                      <img src="../../images-patternlab/josh-35-35.jpg">
                     </div>
                   </div>
                   <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Danish danish candy canes bonbon cheesecake danish marzipan</a></div>
+                    <div class="view__title"><a href="#">Yeah, I like animals better than people sometimes</a></div>
                     <div class="view__meta">
-                      Posted by <strong>Inigo Montoya</strong> | November 19 at 11:55pm
+                      Posted by <strong>Joshua Lyman</strong> | July 22 at 11:12am
                     </div>
                   </div>
                 </div>
