--- a/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-04-panes/index.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-04-panes/index.html
@@ -810,15 +810,15 @@
     <article role="article" class="layout-slat profile-thumb">
         <div class="layout-slat__media"> 
           <div class="profile-thumb__image--rounded">
-            <a href="#"><img alt="" src="../../images-patternlab/watson-78-78.jpg"></a>
+            <a href="#"><img alt="" src="../../images-patternlab/inigo-78-78.jpg"></a>
           </div>
           <div class="profile-thumb__name">
-            <a href="#">Dr. John Watson, M.D.</a>  
+            <a href="#">Inigo Montoya</a>  
           </div>
         </div>
         <div class="layout-slat__content">
           <div class="profile-thumb__summary">
-            Did we just break in to a military base to investigate a rabbit?
+            Hello. My name is Inigo Montoya. You killed my father. Prepare to die.
           </div>
         </div>
     </article>
@@ -835,15 +835,15 @@
     &lt;article role=&quot;article&quot; class=&quot;layout-slat profile-thumb&quot;&gt;
         &lt;div class=&quot;layout-slat__media&quot;&gt; 
           &lt;div class=&quot;profile-thumb__image--rounded&quot;&gt;
-            &lt;a href=&quot;#&quot;&gt;&lt;img alt=&quot;&quot; src=&quot;../../images-patternlab/watson-78-78.jpg&quot;&gt;&lt;/a&gt;
+            &lt;a href=&quot;#&quot;&gt;&lt;img alt=&quot;&quot; src=&quot;../../images-patternlab/inigo-78-78.jpg&quot;&gt;&lt;/a&gt;
           &lt;/div&gt;
           &lt;div class=&quot;profile-thumb__name&quot;&gt;
-            &lt;a href=&quot;#&quot;&gt;Dr. John Watson, M.D.&lt;/a&gt;  
+            &lt;a href=&quot;#&quot;&gt;Inigo Montoya&lt;/a&gt;  
           &lt;/div&gt;
         &lt;/div&gt;
         &lt;div class=&quot;layout-slat__content&quot;&gt;
           &lt;div class=&quot;profile-thumb__summary&quot;&gt;
-            Did we just break in to a military base to investigate a rabbit?
+            Hello. My name is Inigo Montoya. You killed my father. Prepare to die.
           &lt;/div&gt;
         &lt;/div&gt;
     &lt;/article&gt;
@@ -866,13 +866,13 @@
           <div class="layout-slat layout-slat--small">
             <div class="layout-slat__media">      
               <div class="view__author-image">
-                <img src="../../images-patternlab/gordon-35-35.jpg">
+                <img src="../../images-patternlab/tyrion-35-35.jpg">
               </div>
             </div>
             <div class="layout-slat__content">
-              <div class="view__title"><a href="#">Help, help, I'm being repressed!</a></div>
+              <div class="view__title"><a href="#">Thunder, thunder, thundercats, Ho!</a></div>
               <div class="view__meta">
-                Posted by <strong>Gordon Clark</strong> | October 25 at 3:51am
+                Posted by <strong>Tyrion Lannister</strong> | June 8 at 11:37pm
               </div>
             </div>
           </div>
@@ -881,13 +881,13 @@
           <div class="layout-slat layout-slat--small">
             <div class="layout-slat__media">      
               <div class="view__author-image">
-                <img src="../../images-patternlab/sherlock-35-35.jpg">
+                <img src="../../images-patternlab/watson-35-35.jpg">
               </div>
             </div>
             <div class="layout-slat__content">
-              <div class="view__title"><a href="#">You Can't Take The Sky From Me</a></div>
+              <div class="view__title"><a href="#">Veggies sunt bona vobis, proinde vos postulo</a></div>
               <div class="view__meta">
-                Posted by <strong>Sherlock Holmes</strong> | January 1 at 6:20am
+                Posted by <strong>Dr. John Watson, M.D.</strong> | February 10 at 1:20pm
               </div>
             </div>
           </div>
@@ -896,13 +896,13 @@
           <div class="layout-slat layout-slat--small">
             <div class="layout-slat__media">      
               <div class="view__author-image">
-                <img src="../../images-patternlab/inigo-35-35.jpg">
+                <img src="../../images-patternlab/josh-35-35.jpg">
               </div>
             </div>
             <div class="layout-slat__content">
-              <div class="view__title"><a href="#">Danish danish candy canes bonbon cheesecake danish marzipan</a></div>
+              <div class="view__title"><a href="#">Yeah, I like animals better than people sometimes</a></div>
               <div class="view__meta">
-                Posted by <strong>Inigo Montoya</strong> | November 19 at 11:55pm
+                Posted by <strong>Joshua Lyman</strong> | July 22 at 11:12am
               </div>
             </div>
           </div>
@@ -925,13 +925,13 @@
           &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
             &lt;div class=&quot;layout-slat__media&quot;&gt;      
               &lt;div class=&quot;view__author-image&quot;&gt;
-                &lt;img src=&quot;../../images-patternlab/gordon-35-35.jpg&quot;&gt;
+                &lt;img src=&quot;../../images-patternlab/tyrion-35-35.jpg&quot;&gt;
               &lt;/div&gt;
             &lt;/div&gt;
             &lt;div class=&quot;layout-slat__content&quot;&gt;
-              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Help, help, I'm being repressed!&lt;/a&gt;&lt;/div&gt;
+              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Thunder, thunder, thundercats, Ho!&lt;/a&gt;&lt;/div&gt;
               &lt;div class=&quot;view__meta&quot;&gt;
-                Posted by &lt;strong&gt;Gordon Clark&lt;/strong&gt; | October 25 at 3:51am
+                Posted by &lt;strong&gt;Tyrion Lannister&lt;/strong&gt; | June 8 at 11:37pm
               &lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
@@ -940,13 +940,13 @@
           &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
             &lt;div class=&quot;layout-slat__media&quot;&gt;      
               &lt;div class=&quot;view__author-image&quot;&gt;
-                &lt;img src=&quot;../../images-patternlab/sherlock-35-35.jpg&quot;&gt;
+                &lt;img src=&quot;../../images-patternlab/watson-35-35.jpg&quot;&gt;
               &lt;/div&gt;
             &lt;/div&gt;
             &lt;div class=&quot;layout-slat__content&quot;&gt;
-              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;You Can't Take The Sky From Me&lt;/a&gt;&lt;/div&gt;
+              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Veggies sunt bona vobis, proinde vos postulo&lt;/a&gt;&lt;/div&gt;
               &lt;div class=&quot;view__meta&quot;&gt;
-                Posted by &lt;strong&gt;Sherlock Holmes&lt;/strong&gt; | January 1 at 6:20am
+                Posted by &lt;strong&gt;Dr. John Watson, M.D.&lt;/strong&gt; | February 10 at 1:20pm
               &lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
@@ -955,13 +955,13 @@
           &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
             &lt;div class=&quot;layout-slat__media&quot;&gt;      
               &lt;div class=&quot;view__author-image&quot;&gt;
-                &lt;img src=&quot;../../images-patternlab/inigo-35-35.jpg&quot;&gt;
+                &lt;img src=&quot;../../images-patternlab/josh-35-35.jpg&quot;&gt;
               &lt;/div&gt;
             &lt;/div&gt;
             &lt;div class=&quot;layout-slat__content&quot;&gt;
-              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Danish danish candy canes bonbon cheesecake danish marzipan&lt;/a&gt;&lt;/div&gt;
+              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Yeah, I like animals better than people sometimes&lt;/a&gt;&lt;/div&gt;
               &lt;div class=&quot;view__meta&quot;&gt;
-                Posted by &lt;strong&gt;Inigo Montoya&lt;/strong&gt; | November 19 at 11:55pm
+                Posted by &lt;strong&gt;Joshua Lyman&lt;/strong&gt; | July 22 at 11:12am
               &lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
