--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-innovation/02-organisms-01-content-types-innovation.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-innovation/02-organisms-01-content-types-innovation.html
@@ -177,15 +177,15 @@
             <article role="article" class="layout-slat profile-thumb">
                 <div class="layout-slat__media"> 
                   <div class="profile-thumb__image--rounded">
-                    <a href="#"><img alt="" src="../../images-patternlab/watson-78-78.jpg"></a>
+                    <a href="#"><img alt="" src="../../images-patternlab/inigo-78-78.jpg"></a>
                   </div>
                   <div class="profile-thumb__name">
-                    <a href="#">Dr. John Watson, M.D.</a>  
+                    <a href="#">Inigo Montoya</a>  
                   </div>
                 </div>
                 <div class="layout-slat__content">
                   <div class="profile-thumb__summary">
-                    Did we just break in to a military base to investigate a rabbit?
+                    Hello. My name is Inigo Montoya. You killed my father. Prepare to die.
                   </div>
                 </div>
             </article>
