--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-discussion-landing/03-templates-discussion-landing.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-discussion-landing/03-templates-discussion-landing.html
@@ -545,23 +545,23 @@
                           <div class="view view-content-author">
                             <div class="views-field views-field-field-user-photo">        
                               <div class="field-content profile-thumb__image--rounded">
-                                <img src="../../images-patternlab/scully-58-58.jpg">
+                                <img src="../../images-patternlab/mulder-58-58.jpg">
                               </div>  
                             </div>  
                           </div>
                         </div>
                         <div class="layout-slat__content">
                           <h3 class="node__title">
-                            <a href="http://hipsteripsum.me/">Whatever swag accusamus occupy, gentrify butcher tote bag</a>
+                            <a href="http://baconipsum.com/">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a>
                           </h3>
                           <div class="node__posted-by">
-                            <span>Posted by <a href="#">Dana Scully</a> on April 13, 2015 at 10:14am</span>
+                            <span>Posted by <a href="#">Fox Mulder</a> on March 22, 2015 at 4:45pm</span>
                           </div>
                           <div class="node__summary">
                             <div class="field field--discussion-desc">
                               <div class="field-items">
                                 <div class="field-item even">
-                                  <p>Fanny pack ullamco et veniam semiotics. Shoreditch PBR reprehenderit cliche, magna Tonx aesthetic. Narwhal photo booth DIY aute post-ironic anim. Vice cliche brunch est before they sold out fap, street art Odd Future fashion axe messenger bag nihil Tonx tattooed. Nihil hashtag incididunt, do eu art party Banksy jean shorts four loko typewriter.</p>
+                                  <p>Boudin sausage jerky pastrami ground round salami biltong. Sausage fatback strip steak doner pork loin, pork belly drumstick ham short loin hamburger shankle. Short ribs sirloin rump tri-tip beef biltong. Meatball pig salami, jowl pork loin fatback short loin drumstick andouille.</p>
                                 </div>
                               </div>
                             </div>
@@ -576,54 +576,23 @@
                           <div class="view view-content-author">
                             <div class="views-field views-field-field-user-photo">        
                               <div class="field-content profile-thumb__image--rounded">
-                                <img src="../../images-patternlab/watson-58-58.jpg">
+                                <img src="../../images-patternlab/josh-58-58.jpg">
                               </div>  
                             </div>  
                           </div>
                         </div>
                         <div class="layout-slat__content">
                           <h3 class="node__title">
-                            <a href="http://veggieipsum.com">Veggies sunt bona vobis, proinde vos postulo</a>
+                            <a href="http://slipsum.com/lite/">Yeah, I like animals better than people sometimes</a>
                           </h3>
                           <div class="node__posted-by">
-                            <span>Posted by <a href="#">Dr. John Watson, M.D.</a> on February 10, 2015 at 1:20pm</span>
+                            <span>Posted by <a href="#">Joshua Lyman</a> on July 22, 2015 at 11:12am</span>
                           </div>
                           <div class="node__summary">
                             <div class="field field--discussion-desc">
                               <div class="field-items">
                                 <div class="field-item even">
-                                  <p>Mung bean squash sorrel taro coriander collard greens gumbo bitterleaf tomato. Taro water chestnut celtuce turnip yarrow celery endive scallion black-eyed pea onion. Aubergine dulse turnip greens mustard salsify garlic soybean parsley bitterleaf desert raisin courgette.</p>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-
-                    </div>
-                    <div class="views-row">
-                      <div class="layout-slat node node--discussion node--listing view-mode-listing">
-                        <div class="layout-slat__media">
-                          <div class="view view-content-author">
-                            <div class="views-field views-field-field-user-photo">        
-                              <div class="field-content profile-thumb__image--rounded">
-                                <img src="../../images-patternlab/gordon-58-58.jpg">
-                              </div>  
-                            </div>  
-                          </div>
-                        </div>
-                        <div class="layout-slat__content">
-                          <h3 class="node__title">
-                            <a href="http://chrisvalleskey.com/fillerama/">Help, help, I'm being repressed!</a>
-                          </h3>
-                          <div class="node__posted-by">
-                            <span>Posted by <a href="#">Gordon Clark</a> on October 25, 2015 at 3:51am</span>
-                          </div>
-                          <div class="node__summary">
-                            <div class="field field--discussion-desc">
-                              <div class="field-items">
-                                <div class="field-item even">
-                                  <p>The Knights Who Say Ni demand a sacrifice! …Are you suggesting that coconuts migrate? Knights of Ni, we are but simple travelers who seek the enchanter who lives beyond these woods. You don't frighten us, English pig-dogs! Go and boil your bottoms, sons of a silly person! I blow my nose at you, so-called Ah-thoor Keeng, you and all your silly English K-n-n-n-n-n-n-n-niggits!</p>
+                                  <p>Especially dogs. Dogs are the best. Every time you come home, they act like they haven't seen you in a year. And the good thing about dogs... is they got different dogs for different people. Like pit bulls. The dog of dogs. Pit bull can be the right man's best friend... or the wrong man's worst enemy. You going to give me a dog for a pet, give me a pit bull.</p>
                                 </div>
                               </div>
                             </div>
@@ -669,23 +638,116 @@
                           <div class="view view-content-author">
                             <div class="views-field views-field-field-user-photo">        
                               <div class="field-content profile-thumb__image--rounded">
-                                <img src="../../images-patternlab/mulder-58-58.jpg">
+                                <img src="../../images-patternlab/buttercup-58-58.jpg">
                               </div>  
                             </div>  
                           </div>
                         </div>
                         <div class="layout-slat__content">
                           <h3 class="node__title">
-                            <a href="http://baconipsum.com/">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a>
+                            <a href="http://www.cheeseipsum.co.uk/">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a>
                           </h3>
                           <div class="node__posted-by">
-                            <span>Posted by <a href="#">Fox Mulder</a> on March 22, 2015 at 4:45pm</span>
+                            <span>Posted by <a href="#">Princess Buttercup</a> on December 28, 2015 at 8:34am</span>
                           </div>
                           <div class="node__summary">
                             <div class="field field--discussion-desc">
                               <div class="field-items">
                                 <div class="field-item even">
-                                  <p>Boudin sausage jerky pastrami ground round salami biltong. Sausage fatback strip steak doner pork loin, pork belly drumstick ham short loin hamburger shankle. Short ribs sirloin rump tri-tip beef biltong. Meatball pig salami, jowl pork loin fatback short loin drumstick andouille.</p>
+                                  <p>Queso caerphilly cheesecake. Parmesan chalk and cheese port-salut port-salut babybel cottage cheese cheesy grin pepper jack. Croque monsieur paneer st. agur blue cheese emmental airedale monterey jack bavarian bergkase cheese triangles. Halloumi parmesan.</p>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
+                    </div>
+                    <div class="views-row">
+                      <div class="layout-slat node node--discussion node--listing view-mode-listing">
+                        <div class="layout-slat__media">
+                          <div class="view view-content-author">
+                            <div class="views-field views-field-field-user-photo">        
+                              <div class="field-content profile-thumb__image--rounded">
+                                <img src="../../images-patternlab/gordon-58-58.jpg">
+                              </div>  
+                            </div>  
+                          </div>
+                        </div>
+                        <div class="layout-slat__content">
+                          <h3 class="node__title">
+                            <a href="http://chrisvalleskey.com/fillerama/">Help, help, I'm being repressed!</a>
+                          </h3>
+                          <div class="node__posted-by">
+                            <span>Posted by <a href="#">Gordon Clark</a> on October 25, 2015 at 3:51am</span>
+                          </div>
+                          <div class="node__summary">
+                            <div class="field field--discussion-desc">
+                              <div class="field-items">
+                                <div class="field-item even">
+                                  <p>The Knights Who Say Ni demand a sacrifice! …Are you suggesting that coconuts migrate? Knights of Ni, we are but simple travelers who seek the enchanter who lives beyond these woods. You don't frighten us, English pig-dogs! Go and boil your bottoms, sons of a silly person! I blow my nose at you, so-called Ah-thoor Keeng, you and all your silly English K-n-n-n-n-n-n-n-niggits!</p>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
+                    </div>
+                    <div class="views-row">
+                      <div class="layout-slat node node--discussion node--listing view-mode-listing">
+                        <div class="layout-slat__media">
+                          <div class="view view-content-author">
+                            <div class="views-field views-field-field-user-photo">        
+                              <div class="field-content profile-thumb__image--rounded">
+                                <img src="../../images-patternlab/inigo-58-58.jpg">
+                              </div>  
+                            </div>  
+                          </div>
+                        </div>
+                        <div class="layout-slat__content">
+                          <h3 class="node__title">
+                            <a href="http://cupcakeipsum.com/">Danish danish candy canes bonbon cheesecake danish marzipan</a>
+                          </h3>
+                          <div class="node__posted-by">
+                            <span>Posted by <a href="#">Inigo Montoya</a> on November 19, 2015 at 11:55pm</span>
+                          </div>
+                          <div class="node__summary">
+                            <div class="field field--discussion-desc">
+                              <div class="field-items">
+                                <div class="field-item even">
+                                  <p>Sugar plum wafer soufflé ice cream. Wafer topping biscuit pie gummi bears topping. Gummies toffee powder applicake oat cake cookie. Bear claw candy tootsie roll fruitcake danish applicake candy canes macaroon. Liquorice tiramisu danish cotton candy gummies. Tiramisu dessert gummi bears macaroon sweet roll jelly-o gummi bears marzipan.</p>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
+                    </div>
+                    <div class="views-row">
+                      <div class="layout-slat node node--discussion node--listing view-mode-listing">
+                        <div class="layout-slat__media">
+                          <div class="view view-content-author">
+                            <div class="views-field views-field-field-user-photo">        
+                              <div class="field-content profile-thumb__image--rounded">
+                                <img src="../../images-patternlab/watson-58-58.jpg">
+                              </div>  
+                            </div>  
+                          </div>
+                        </div>
+                        <div class="layout-slat__content">
+                          <h3 class="node__title">
+                            <a href="http://veggieipsum.com">Veggies sunt bona vobis, proinde vos postulo</a>
+                          </h3>
+                          <div class="node__posted-by">
+                            <span>Posted by <a href="#">Dr. John Watson, M.D.</a> on February 10, 2015 at 1:20pm</span>
+                          </div>
+                          <div class="node__summary">
+                            <div class="field field--discussion-desc">
+                              <div class="field-items">
+                                <div class="field-item even">
+                                  <p>Mung bean squash sorrel taro coriander collard greens gumbo bitterleaf tomato. Taro water chestnut celtuce turnip yarrow celery endive scallion black-eyed pea onion. Aubergine dulse turnip greens mustard salsify garlic soybean parsley bitterleaf desert raisin courgette.</p>
                                 </div>
                               </div>
                             </div>
@@ -748,68 +810,6 @@
                               <div class="field-items">
                                 <div class="field-item even">
                                   <p>Beats all you've ever saw, been in trouble with the law since the day they was born. Straight'nin' the curve, flat'nin' the hills. Someday the mountain might get 'em, but the law never will. Makin' their way, the only way they know how, that's just a little bit more than the law will allow. Just good ol' boys, wouldn't change if they could, fightin' the system like a true modern day Robin Hood.</p>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-
-                    </div>
-                    <div class="views-row">
-                      <div class="layout-slat node node--discussion node--listing view-mode-listing">
-                        <div class="layout-slat__media">
-                          <div class="view view-content-author">
-                            <div class="views-field views-field-field-user-photo">        
-                              <div class="field-content profile-thumb__image--rounded">
-                                <img src="../../images-patternlab/inigo-58-58.jpg">
-                              </div>  
-                            </div>  
-                          </div>
-                        </div>
-                        <div class="layout-slat__content">
-                          <h3 class="node__title">
-                            <a href="http://cupcakeipsum.com/">Danish danish candy canes bonbon cheesecake danish marzipan</a>
-                          </h3>
-                          <div class="node__posted-by">
-                            <span>Posted by <a href="#">Inigo Montoya</a> on November 19, 2015 at 11:55pm</span>
-                          </div>
-                          <div class="node__summary">
-                            <div class="field field--discussion-desc">
-                              <div class="field-items">
-                                <div class="field-item even">
-                                  <p>Sugar plum wafer soufflé ice cream. Wafer topping biscuit pie gummi bears topping. Gummies toffee powder applicake oat cake cookie. Bear claw candy tootsie roll fruitcake danish applicake candy canes macaroon. Liquorice tiramisu danish cotton candy gummies. Tiramisu dessert gummi bears macaroon sweet roll jelly-o gummi bears marzipan.</p>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-
-                    </div>
-                    <div class="views-row">
-                      <div class="layout-slat node node--discussion node--listing view-mode-listing">
-                        <div class="layout-slat__media">
-                          <div class="view view-content-author">
-                            <div class="views-field views-field-field-user-photo">        
-                              <div class="field-content profile-thumb__image--rounded">
-                                <img src="../../images-patternlab/josh-58-58.jpg">
-                              </div>  
-                            </div>  
-                          </div>
-                        </div>
-                        <div class="layout-slat__content">
-                          <h3 class="node__title">
-                            <a href="http://slipsum.com/lite/">Yeah, I like animals better than people sometimes</a>
-                          </h3>
-                          <div class="node__posted-by">
-                            <span>Posted by <a href="#">Joshua Lyman</a> on July 22, 2015 at 11:12am</span>
-                          </div>
-                          <div class="node__summary">
-                            <div class="field field--discussion-desc">
-                              <div class="field-items">
-                                <div class="field-item even">
-                                  <p>Especially dogs. Dogs are the best. Every time you come home, they act like they haven't seen you in a year. And the good thing about dogs... is they got different dogs for different people. Like pit bulls. The dog of dogs. Pit bull can be the right man's best friend... or the wrong man's worst enemy. You going to give me a dog for a pet, give me a pit bull.</p>
                                 </div>
                               </div>
                             </div>
