--- a/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-discussion-landing/04-pages-discussion-landing.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-discussion-landing/04-pages-discussion-landing.escaped.html
@@ -488,23 +488,23 @@
                           &lt;div class=&quot;view view-content-author&quot;&gt;
                             &lt;div class=&quot;views-field views-field-field-user-photo&quot;&gt;        
                               &lt;div class=&quot;field-content profile-thumb__image--rounded&quot;&gt;
-                                &lt;img src=&quot;../../images-patternlab/scully-58-58.jpg&quot;&gt;
+                                &lt;img src=&quot;../../images-patternlab/mulder-58-58.jpg&quot;&gt;
                               &lt;/div&gt;  
                             &lt;/div&gt;  
                           &lt;/div&gt;
                         &lt;/div&gt;
                         &lt;div class=&quot;layout-slat__content&quot;&gt;
                           &lt;h3 class=&quot;node__title&quot;&gt;
-                            &lt;a href=&quot;http://forumone.com/&quot;&gt;A Really, Really Much Much Longer Discussion Title&lt;/a&gt;
+                            &lt;a href=&quot;http://forumone.com/&quot;&gt;Discussion Title&lt;/a&gt;
                           &lt;/h3&gt;
                           &lt;div class=&quot;node__posted-by&quot;&gt;
-                            &lt;span&gt;Posted by &lt;a href=&quot;#&quot;&gt;Dana Scully&lt;/a&gt; on April 13, 2015 at 10:14am&lt;/span&gt;
+                            &lt;span&gt;Posted by &lt;a href=&quot;#&quot;&gt;Fox Mulder&lt;/a&gt; on March 22, 2015 at 4:45pm&lt;/span&gt;
                           &lt;/div&gt;
                           &lt;div class=&quot;node__summary&quot;&gt;
                             &lt;div class=&quot;field field--discussion-desc&quot;&gt;
                               &lt;div class=&quot;field-items&quot;&gt;
                                 &lt;div class=&quot;field-item even&quot;&gt;
-                                  &lt;p&gt;Fusce euismod ultricies mauris eget pellentesque. Curabitur mauris eros, pretium condimentum diam id, vulputate condimentum diam. Quisque viverra massa sed lorem ultrices gravida vel quis velit.&lt;/p&gt;
+                                  &lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a lectus erat. Cras leo urna, fermentum ac lacus ac, pharetra gravida sapien.&lt;/p&gt;
                                 &lt;/div&gt;
                               &lt;/div&gt;
                             &lt;/div&gt;
@@ -519,7 +519,7 @@
                           &lt;div class=&quot;view view-content-author&quot;&gt;
                             &lt;div class=&quot;views-field views-field-field-user-photo&quot;&gt;        
                               &lt;div class=&quot;field-content profile-thumb__image--rounded&quot;&gt;
-                                &lt;img src=&quot;../../images-patternlab/watson-58-58.jpg&quot;&gt;
+                                &lt;img src=&quot;../../images-patternlab/josh-58-58.jpg&quot;&gt;
                               &lt;/div&gt;  
                             &lt;/div&gt;  
                           &lt;/div&gt;
@@ -529,13 +529,75 @@
                             &lt;a href=&quot;http://forumone.com/&quot;&gt;A Longer Discussion Title&lt;/a&gt;
                           &lt;/h3&gt;
                           &lt;div class=&quot;node__posted-by&quot;&gt;
-                            &lt;span&gt;Posted by &lt;a href=&quot;#&quot;&gt;Dr. John Watson, M.D.&lt;/a&gt; on February 10, 2015 at 1:20pm&lt;/span&gt;
+                            &lt;span&gt;Posted by &lt;a href=&quot;#&quot;&gt;Joshua Lyman&lt;/a&gt; on July 22, 2015 at 11:12am&lt;/span&gt;
                           &lt;/div&gt;
                           &lt;div class=&quot;node__summary&quot;&gt;
                             &lt;div class=&quot;field field--discussion-desc&quot;&gt;
                               &lt;div class=&quot;field-items&quot;&gt;
                                 &lt;div class=&quot;field-item even&quot;&gt;
-                                  &lt;p&gt;Pellentesque dapibus, est sed sollicitudin tincidunt, orci leo ornare dui, tempor euismod dolor elit quis quam. Etiam eu ex ut felis suscipit scelerisque.&lt;/p&gt;
+                                  &lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a lectus erat. Cras leo urna, fermentum ac lacus ac, pharetra gravida sapien.&lt;/p&gt;
+                                &lt;/div&gt;
+                              &lt;/div&gt;
+                            &lt;/div&gt;
+                          &lt;/div&gt;
+                        &lt;/div&gt;
+                      &lt;/div&gt;
+
+                    &lt;/div&gt;
+                    &lt;div class=&quot;views-row&quot;&gt;
+                      &lt;div class=&quot;layout-slat node node--discussion node--listing view-mode-listing&quot;&gt;
+                        &lt;div class=&quot;layout-slat__media&quot;&gt;
+                          &lt;div class=&quot;view view-content-author&quot;&gt;
+                            &lt;div class=&quot;views-field views-field-field-user-photo&quot;&gt;        
+                              &lt;div class=&quot;field-content profile-thumb__image--rounded&quot;&gt;
+                                &lt;img src=&quot;../../images-patternlab/daenerys-58-58.jpg&quot;&gt;
+                              &lt;/div&gt;  
+                            &lt;/div&gt;  
+                          &lt;/div&gt;
+                        &lt;/div&gt;
+                        &lt;div class=&quot;layout-slat__content&quot;&gt;
+                          &lt;h3 class=&quot;node__title&quot;&gt;
+                            &lt;a href=&quot;http://forumone.com/&quot;&gt;A Really, Really Much Much Longer Discussion Title&lt;/a&gt;
+                          &lt;/h3&gt;
+                          &lt;div class=&quot;node__posted-by&quot;&gt;
+                            &lt;span&gt;Posted by &lt;a href=&quot;#&quot;&gt;Daenerys Targaryen&lt;/a&gt; on May 26, 2015 at 6:37pm&lt;/span&gt;
+                          &lt;/div&gt;
+                          &lt;div class=&quot;node__summary&quot;&gt;
+                            &lt;div class=&quot;field field--discussion-desc&quot;&gt;
+                              &lt;div class=&quot;field-items&quot;&gt;
+                                &lt;div class=&quot;field-item even&quot;&gt;
+                                  &lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a lectus erat. Cras leo urna, fermentum ac lacus ac, pharetra gravida sapien.&lt;/p&gt;
+                                &lt;/div&gt;
+                              &lt;/div&gt;
+                            &lt;/div&gt;
+                          &lt;/div&gt;
+                        &lt;/div&gt;
+                      &lt;/div&gt;
+
+                    &lt;/div&gt;
+                    &lt;div class=&quot;views-row&quot;&gt;
+                      &lt;div class=&quot;layout-slat node node--discussion node--listing view-mode-listing&quot;&gt;
+                        &lt;div class=&quot;layout-slat__media&quot;&gt;
+                          &lt;div class=&quot;view view-content-author&quot;&gt;
+                            &lt;div class=&quot;views-field views-field-field-user-photo&quot;&gt;        
+                              &lt;div class=&quot;field-content profile-thumb__image--rounded&quot;&gt;
+                                &lt;img src=&quot;../../images-patternlab/buttercup-58-58.jpg&quot;&gt;
+                              &lt;/div&gt;  
+                            &lt;/div&gt;  
+                          &lt;/div&gt;
+                        &lt;/div&gt;
+                        &lt;div class=&quot;layout-slat__content&quot;&gt;
+                          &lt;h3 class=&quot;node__title&quot;&gt;
+                            &lt;a href=&quot;http://forumone.com/&quot;&gt;A Really, Really Much Much Longer Discussion Title&lt;/a&gt;
+                          &lt;/h3&gt;
+                          &lt;div class=&quot;node__posted-by&quot;&gt;
+                            &lt;span&gt;Posted by &lt;a href=&quot;#&quot;&gt;Princess Buttercup&lt;/a&gt; on December 28, 2015 at 8:34am&lt;/span&gt;
+                          &lt;/div&gt;
+                          &lt;div class=&quot;node__summary&quot;&gt;
+                            &lt;div class=&quot;field field--discussion-desc&quot;&gt;
+                              &lt;div class=&quot;field-items&quot;&gt;
+                                &lt;div class=&quot;field-item even&quot;&gt;
+                                  &lt;p&gt;Fusce euismod ultricies mauris eget pellentesque. Curabitur mauris eros, pretium condimentum diam id, vulputate condimentum diam. Quisque viverra massa sed lorem ultrices gravida vel quis velit.&lt;/p&gt;
                                 &lt;/div&gt;
                               &lt;/div&gt;
                             &lt;/div&gt;
@@ -581,7 +643,7 @@
                           &lt;div class=&quot;view view-content-author&quot;&gt;
                             &lt;div class=&quot;views-field views-field-field-user-photo&quot;&gt;        
                               &lt;div class=&quot;field-content profile-thumb__image--rounded&quot;&gt;
-                                &lt;img src=&quot;../../images-patternlab/daenerys-58-58.jpg&quot;&gt;
+                                &lt;img src=&quot;../../images-patternlab/inigo-58-58.jpg&quot;&gt;
                               &lt;/div&gt;  
                             &lt;/div&gt;  
                           &lt;/div&gt;
@@ -591,7 +653,7 @@
                             &lt;a href=&quot;http://forumone.com/&quot;&gt;Discussion Title&lt;/a&gt;
                           &lt;/h3&gt;
                           &lt;div class=&quot;node__posted-by&quot;&gt;
-                            &lt;span&gt;Posted by &lt;a href=&quot;#&quot;&gt;Daenerys Targaryen&lt;/a&gt; on May 26, 2015 at 6:37pm&lt;/span&gt;
+                            &lt;span&gt;Posted by &lt;a href=&quot;#&quot;&gt;Inigo Montoya&lt;/a&gt; on November 19, 2015 at 11:55pm&lt;/span&gt;
                           &lt;/div&gt;
                           &lt;div class=&quot;node__summary&quot;&gt;
                             &lt;div class=&quot;field field--discussion-desc&quot;&gt;
@@ -612,17 +674,17 @@
                           &lt;div class=&quot;view view-content-author&quot;&gt;
                             &lt;div class=&quot;views-field views-field-field-user-photo&quot;&gt;        
                               &lt;div class=&quot;field-content profile-thumb__image--rounded&quot;&gt;
-                                &lt;img src=&quot;../../images-patternlab/mulder-58-58.jpg&quot;&gt;
+                                &lt;img src=&quot;../../images-patternlab/watson-58-58.jpg&quot;&gt;
                               &lt;/div&gt;  
                             &lt;/div&gt;  
                           &lt;/div&gt;
                         &lt;/div&gt;
                         &lt;div class=&quot;layout-slat__content&quot;&gt;
                           &lt;h3 class=&quot;node__title&quot;&gt;
-                            &lt;a href=&quot;http://forumone.com/&quot;&gt;A Longer Discussion Title&lt;/a&gt;
+                            &lt;a href=&quot;http://forumone.com/&quot;&gt;A Really, Really Much Much Longer Discussion Title&lt;/a&gt;
                           &lt;/h3&gt;
                           &lt;div class=&quot;node__posted-by&quot;&gt;
-                            &lt;span&gt;Posted by &lt;a href=&quot;#&quot;&gt;Fox Mulder&lt;/a&gt; on March 22, 2015 at 4:45pm&lt;/span&gt;
+                            &lt;span&gt;Posted by &lt;a href=&quot;#&quot;&gt;Dr. John Watson, M.D.&lt;/a&gt; on February 10, 2015 at 1:20pm&lt;/span&gt;
                           &lt;/div&gt;
                           &lt;div class=&quot;node__summary&quot;&gt;
                             &lt;div class=&quot;field field--discussion-desc&quot;&gt;
@@ -650,7 +712,7 @@
                         &lt;/div&gt;
                         &lt;div class=&quot;layout-slat__content&quot;&gt;
                           &lt;h3 class=&quot;node__title&quot;&gt;
-                            &lt;a href=&quot;http://forumone.com/&quot;&gt;Discussion Title&lt;/a&gt;
+                            &lt;a href=&quot;http://forumone.com/&quot;&gt;A Longer Discussion Title&lt;/a&gt;
                           &lt;/h3&gt;
                           &lt;div class=&quot;node__posted-by&quot;&gt;
                             &lt;span&gt;Posted by &lt;a href=&quot;#&quot;&gt;Cameron Howe&lt;/a&gt; on September 4, 2015 at 9:04am&lt;/span&gt;
@@ -659,7 +721,7 @@
                             &lt;div class=&quot;field field--discussion-desc&quot;&gt;
                               &lt;div class=&quot;field-items&quot;&gt;
                                 &lt;div class=&quot;field-item even&quot;&gt;
-                                  &lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a lectus erat. Cras leo urna, fermentum ac lacus ac, pharetra gravida sapien.&lt;/p&gt;
+                                  &lt;p&gt;Fusce euismod ultricies mauris eget pellentesque. Curabitur mauris eros, pretium condimentum diam id, vulputate condimentum diam. Quisque viverra massa sed lorem ultrices gravida vel quis velit.&lt;/p&gt;
                                 &lt;/div&gt;
                               &lt;/div&gt;
                             &lt;/div&gt;
@@ -690,69 +752,7 @@
                             &lt;div class=&quot;field field--discussion-desc&quot;&gt;
                               &lt;div class=&quot;field-items&quot;&gt;
                                 &lt;div class=&quot;field-item even&quot;&gt;
-                                  &lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a lectus erat. Cras leo urna, fermentum ac lacus ac, pharetra gravida sapien.&lt;/p&gt;
-                                &lt;/div&gt;
-                              &lt;/div&gt;
-                            &lt;/div&gt;
-                          &lt;/div&gt;
-                        &lt;/div&gt;
-                      &lt;/div&gt;
-
-                    &lt;/div&gt;
-                    &lt;div class=&quot;views-row&quot;&gt;
-                      &lt;div class=&quot;layout-slat node node--discussion node--listing view-mode-listing&quot;&gt;
-                        &lt;div class=&quot;layout-slat__media&quot;&gt;
-                          &lt;div class=&quot;view view-content-author&quot;&gt;
-                            &lt;div class=&quot;views-field views-field-field-user-photo&quot;&gt;        
-                              &lt;div class=&quot;field-content profile-thumb__image--rounded&quot;&gt;
-                                &lt;img src=&quot;../../images-patternlab/inigo-58-58.jpg&quot;&gt;
-                              &lt;/div&gt;  
-                            &lt;/div&gt;  
-                          &lt;/div&gt;
-                        &lt;/div&gt;
-                        &lt;div class=&quot;layout-slat__content&quot;&gt;
-                          &lt;h3 class=&quot;node__title&quot;&gt;
-                            &lt;a href=&quot;http://forumone.com/&quot;&gt;A Really, Really Much Much Longer Discussion Title&lt;/a&gt;
-                          &lt;/h3&gt;
-                          &lt;div class=&quot;node__posted-by&quot;&gt;
-                            &lt;span&gt;Posted by &lt;a href=&quot;#&quot;&gt;Inigo Montoya&lt;/a&gt; on November 19, 2015 at 11:55pm&lt;/span&gt;
-                          &lt;/div&gt;
-                          &lt;div class=&quot;node__summary&quot;&gt;
-                            &lt;div class=&quot;field field--discussion-desc&quot;&gt;
-                              &lt;div class=&quot;field-items&quot;&gt;
-                                &lt;div class=&quot;field-item even&quot;&gt;
-                                  &lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a lectus erat. Cras leo urna, fermentum ac lacus ac, pharetra gravida sapien.&lt;/p&gt;
-                                &lt;/div&gt;
-                              &lt;/div&gt;
-                            &lt;/div&gt;
-                          &lt;/div&gt;
-                        &lt;/div&gt;
-                      &lt;/div&gt;
-
-                    &lt;/div&gt;
-                    &lt;div class=&quot;views-row&quot;&gt;
-                      &lt;div class=&quot;layout-slat node node--discussion node--listing view-mode-listing&quot;&gt;
-                        &lt;div class=&quot;layout-slat__media&quot;&gt;
-                          &lt;div class=&quot;view view-content-author&quot;&gt;
-                            &lt;div class=&quot;views-field views-field-field-user-photo&quot;&gt;        
-                              &lt;div class=&quot;field-content profile-thumb__image--rounded&quot;&gt;
-                                &lt;img src=&quot;../../images-patternlab/josh-58-58.jpg&quot;&gt;
-                              &lt;/div&gt;  
-                            &lt;/div&gt;  
-                          &lt;/div&gt;
-                        &lt;/div&gt;
-                        &lt;div class=&quot;layout-slat__content&quot;&gt;
-                          &lt;h3 class=&quot;node__title&quot;&gt;
-                            &lt;a href=&quot;http://forumone.com/&quot;&gt;A Really, Really Much Much Longer Discussion Title&lt;/a&gt;
-                          &lt;/h3&gt;
-                          &lt;div class=&quot;node__posted-by&quot;&gt;
-                            &lt;span&gt;Posted by &lt;a href=&quot;#&quot;&gt;Joshua Lyman&lt;/a&gt; on July 22, 2015 at 11:12am&lt;/span&gt;
-                          &lt;/div&gt;
-                          &lt;div class=&quot;node__summary&quot;&gt;
-                            &lt;div class=&quot;field field--discussion-desc&quot;&gt;
-                              &lt;div class=&quot;field-items&quot;&gt;
-                                &lt;div class=&quot;field-item even&quot;&gt;
-                                  &lt;p&gt;Fusce euismod ultricies mauris eget pellentesque. Curabitur mauris eros, pretium condimentum diam id, vulputate condimentum diam. Quisque viverra massa sed lorem ultrices gravida vel quis velit.&lt;/p&gt;
+                                  &lt;p&gt;Pellentesque dapibus, est sed sollicitudin tincidunt, orci leo ornare dui, tempor euismod dolor elit quis quam. Etiam eu ex ut felis suscipit scelerisque.&lt;/p&gt;
                                 &lt;/div&gt;
                               &lt;/div&gt;
                             &lt;/div&gt;
